# assiduidade-painel-eletronico

./: .gitignore  README.md  from_xps_to_json.py  pyproject.toml  test_from_xps_to_json.py
data/2021-05-01/: 2021.rar
data/examples/2018/SESSÕES ORDINÁRIAS/: example-2018-22ª SESSÃO ORDINÁRIA.xps
data/examples/2021/SESSÕES ORDINÁRIAS/: example-2021-1ª SESSÃO ORDINÁRIA.xps
