[tool.poetry]
name = "presenca-painel-eletronico"
version = "0.1.0"
description = "Converte relatórios do painel eletrônico em CSV."
authors = ["Dados Abertos de Feira <dadosabertosdefeira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.18.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
